# AYX-MCP-Wrapper

./: .env.template  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements
src/: env.py  main.py  mcp_server.py  tools.py
src/server_client/: __init__.py  api_client.py  configuration.py  rest.py
src/server_client/api/: __init__.py  collections_api.py  credentials_api.py  dcme_admin_api.py  dcme_api.py  dcme_connect_api.py  jobs_api.py  schedules_api.py  server_connections_api.py  subscriptions_api.py  user_groups_api.py  users_api.py  workflows_api.py
src/server_client/models/: __init__.py  active_directory_object_view.py  ad_object.py  add_credentials_user_contract.py  add_credentials_user_group_contract.py  add_schedule_contract.py  add_server_connection_user_contract.py  add_server_connection_user_group_contract.py  add_user_contract.py  add_user_group_contract.py  add_workflow_contract.py  affected_schedule_view.py  app_value.py  asset_data_view.py  assets_view.py  change_users_subscription_contract.py  collection_user_view.py  collection_view.py  collections_permissions_view_contract.py  create_collection_contract.py  create_schedule_contract.py  create_subscription_contract.py  create_user_contract.py  create_user_group_contract.py  credentials_view.py  dcme_connection_handling_rule_contract.py  dcme_credential_contract.py  dcme_credential_view.py  dcme_data_source_contract.py  dcme_data_source_for_connect_view.py  dcme_data_source_view.py  dcme_delete_connection_view.py  dcme_get_connection_for_connect_view.py  (+71 more)
test/: test-API.py  test-XML-Extractor.py  test-get-tools-list.py  test-job-results.py  test-workflow-Execution.py  test.py
